[tool.poetry]
name = "telefuck"
version = "0.1.0"
description = "Telegram bot written in brainfuck and python"
authors = ["yilbegan <w2v@protonmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
aiogram = "^2.14.3"
environs = "^9.3.3"
Pillow = "^8.3.1"

[tool.poetry.dev-dependencies]
mypy = "^0.910"
black = "^21.7b0"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
